# linux-mediaplayer

./: CMakeLists.txt
src/: main.cpp
src/backend/: video_backend.cpp  video_backend.hpp
src/controller/: video_controller.hpp
src/model/: video_model.hpp
src/view/: main_view.cpp  main_view.hpp
